<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/home"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            android:gravity="center"
            android:text="@string/textAccueil1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.75"
            android:text="@string/textAccueil2"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17sp"></TextView>

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:backgroundTint="#E7A07C"
            android:text="@string/btCommencer"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:background="@drawable/radius"
            >
        </Button>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.75"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"></TextView>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:columnCount="2"
        android:rowCount="2">

        <LinearLayout
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:src="@drawable/gl"></ImageView>

            <TextView
                android:layout_width="90dp"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/btAproposGL"
                android:textAlignment="center"
                android:textColor="#4E2A16"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@drawable/customborder"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@drawable/customborder"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/tel"></ImageView>

            <TextView
                android:layout_width="90dp"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/btAproposApp"
                android:textAlignment="center"
                android:textColor="#4E2A16"></TextView>
        </LinearLayout>

    </GridLayout>


</LinearLayout>