<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LancerDiagnostic">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/home_icn"
        android:layout_width="91dp"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="200dp"
        android:paddingBottom="20dp"
        android:layout_marginBottom="80dp"
        android:layout_weight="1.7"
        android:src="@drawable/back1">

    </ImageView>

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/selected_image"
        app:srcCompat="@android:color/background_light" />

    <Button
        android:id="@+id/classify_image"
        android:layout_width="193dp"
        android:layout_height="61dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/selected_image"
        android:layout_centerHorizontal="true"
        android:text="@string/btClassify" />


    <LinearLayout
        android:id="@+id/labels"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/classify_image"
        android:layout_gravity="center"
        android:layout_marginBottom="44dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lableText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/resultat"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ConfidenceText"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/confidence"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label1"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Confidence1"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text=""
                android:gravity="right"
                android:textSize="20sp" />

        </LinearLayout>



    </LinearLayout>



</RelativeLayout>