<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:background="@drawable/start"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_icn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="160dp"
            android:layout_weight="1.7"
            android:src="@drawable/home_icn">

        </ImageView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="150dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.3"
            android:background="@drawable/radius"
            android:backgroundTint="#FFFFFF"
            android:text="@string/btTuto"
            android:textColor="#E7A07C"
            android:textSize="24sp">

        </Button>


    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:columnCount="2"
        android:rowCount="2">

        <LinearLayout
            android:id="@+id/cam_btn"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="1.5"
                android:src="@drawable/cam"></ImageView>

            <TextView
                android:layout_width="90dp"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/appPhoto"
                android:textAlignment="center"
                android:textColor="#4E2A16"
                android:textSize="18sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lib_btn"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="1.7"
                android:src="@drawable/lib"></ImageView>

            <TextView
                android:layout_width="90dp"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/galerie"
                android:textAlignment="center"
                android:textColor="#4E2A16"
                android:textSize="18sp"></TextView>
        </LinearLayout>

    </GridLayout>


</LinearLayout>